<resources>
    <string name="app_name">VITComplaint</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign IN</string>
    <string name="new_to_our_app">New to our app?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="student">Student</string>
    <string name="warden">Warden</string>
    <string name="friends">Friends</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="update">Update</string>
    <string name="room_no">Room no.</string>
    <string name="name">Name</string>
    <string name="electricity">Electricity</string>
    <string name="send">Send -></string>
    <string name="search">Search</string>
    <string name="submit_complaint">Submit Complaint</string>
    <string name="remark">Remark</string>
    <string name="submit">Submit</string>
    <string name="status">Status : </string>
    <string name="priority">Priority :</string>
    <string name="friend_requests">Friend Requests</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="close">Close</string>
    <string name="notifications">Notifications</string>
    <string name="wall">Wall</string>
    <string name="phone_no">Phone No</string>
    <string name="students">Students</string>
    <string name="select_file">Select File</string>
    <string name="upload_file">Upload file</string>
    <string name="pdf_name">pdf_name</string>

</resources>