<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudentLogin">

<TextView
    android:id="@+id/textView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="48dp"
    android:text="@string/student"
    android:textSize="30sp"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="184dp"
        android:layout_height="193dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/student" />

    <EditText
    android:id="@+id/Email_student"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="16dp"
    android:drawableStart="@android:drawable/sym_action_email"
    android:hint="@string/email"
    android:background="@drawable/rounded_border_edittext"
    android:padding="7dp"
        android:textSize="22sp"
        android:drawablePadding="10dp"
        android:paddingStart="10dp"
        android:drawableTint="@color/indigo"
    android:inputType="textEmailAddress"
    app:layout_constraintBottom_toTopOf="@+id/Password_student"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />

<EditText
    android:id="@+id/Password_student"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="12dp"
    android:drawableStart="@android:drawable/ic_lock_lock"
    android:hint="@string/password"
    android:inputType="textPassword"
    app:layout_constraintBottom_toTopOf="@+id/new_student"
    android:background="@drawable/rounded_border_edittext"
    android:padding="7dp"
    android:textSize="22sp"
    android:drawablePadding="10dp"
    android:paddingStart="10dp"
    android:drawableTint="@color/indigo"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent" />

<Button
    android:id="@+id/button_student"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="64dp"
    android:text="@string/sign_in"
    android:minWidth="200dp"
    android:background="@drawable/rounded_button_color"
    android:textColor="@color/white"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.498"
    app:layout_constraintStart_toStartOf="parent" />

<TextView
    android:id="@+id/new_student"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginBottom="24dp"
    android:text="@string/new_to_our_app"
    app:layout_constraintBottom_toTopOf="@+id/button_student"
    app:layout_constraintStart_toStartOf="parent" />

<TextView
    android:id="@+id/resetPassword_Student"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="24dp"
    android:text="@string/forgot_password"
    app:layout_constraintBottom_toTopOf="@+id/button_student"
    app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>