<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"


    >


    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_photo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile"
        android:src="@drawable/warden"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp"
  />

    <TextView
        android:id="@+id/profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/curved_top"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="25dp"
        android:text="@string/profile"
        android:textColor="@color/white"
        android:fontFamily="@font/pacifico"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/logout"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="32dp"
        android:background="@color/indigo"
        android:scaleType="fitXY"
        android:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.952"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_baseline_logout_24" />

    <ImageButton
        android:id="@+id/editPen"
        android:layout_width="35dp"
        android:layout_height="40dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="128dp"
        android:background="@color/white"
        android:scaleType="fitXY"
        android:tint="@color/indigo"
        app:layout_constraintStart_toStartOf="@+id/profile_photo"
        app:layout_constraintTop_toTopOf="@+id/profile_photo"
        app:srcCompat="@drawable/ic_baseline_edit_24" />

    <EditText
        android:id="@+id/room_no"
        android:layout_width="318dp"
        android:layout_height="45dp"
        android:layout_marginBottom="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/room_no"
        android:drawableStart="@drawable/ic_baseline_bedroom_parent_24"
        android:background="@drawable/rounded_border_edittext"
        android:padding="10dp"
        android:drawablePadding="10dp"
        android:paddingStart="10dp"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/name"
        android:layout_width="318dp"
        android:layout_height="45dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/rounded_border_edittext"
        android:drawableStart="@drawable/ic_baseline_person_outline_24"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:drawablePadding="10dp"
        android:paddingStart="10dp"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:minWidth="170dp"
        android:text="@string/update"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/rounded_button_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="318dp"
        android:layout_height="42dp"
        android:layout_marginBottom="32dp"
        android:paddingStart="10dp"
        android:background="@drawable/rounded_border_edittext"
        app:layout_constraintBottom_toTopOf="@+id/room_no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>