<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content" android:layout_width="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/request_photo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:src="@drawable/student"
                app:civ_border_color="@color/indigo"
                app:civ_border_width="2dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                app:cardMaxElevation="12dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true"/>


            <LinearLayout
                android:layout_width="266dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="15dp"

                >

                <TextView
                    android:id="@+id/request_name"
                    android:layout_width="255dp"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/electricity"
                    android:textAlignment="center"
                    android:textColor="@color/indigo"
                    android:textSize="23sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/request_room_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="A-651"
                    android:textSize="18sp"
                    android:textAlignment="center"
                    android:textColor="@color/indigo" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            >

            <Button
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@color/indigo"
                android:textColor="@color/white"
                android:layout_marginEnd="1dp"
                android:text="@string/accept" />

            <Button
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@color/indigo"
                android:textColor="@color/white"
                android:text="@string/reject" />
        </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>